Stab version